--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ body {
   padding: 2.5rem;
 
   display: flex;
+
+  user-select: none;
 }
 
 /* GENERAL */
@@ -70,6 +72,18 @@ a:visited {
 
 .workouts::-webkit-scrollbar {
   width: 0;
+}
+
+.info{
+  /* background-color: red; */
+  color: rgb(100, 100, 100);
+  text-align: center;
+  font-style: italic;
+  font-size: 20px;
+  margin-top: 100px;
+}
+.info.hidden{
+  display: none;
 }
 
 .workout {
