--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ a:visited {
   border-radius: 5px;
   padding: 1.5rem 2.25rem;
   margin-bottom: 1.75rem;
-  cursor: pointer;
+  /* cursor: pointer; */
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -112,6 +112,10 @@ a:visited {
   font-size: 1.7rem;
   font-weight: 600;
   grid-column: 1 / -1;
+}
+
+.workout .material-symbols-outlined {
+  background-color: red;
 }
 
 .workout__details {
