--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ a:visited {
   /* width: auto; */
   flex-basis: 50rem;
   background-color: var(--color-dark--1);
-  padding: 3rem 5rem 4rem 5rem;
+  padding: 30px 40px;
   display: flex;
   flex-direction: column;
   border-radius: 20px 0 0 20px;
@@ -65,11 +65,27 @@ a:visited {
 
 /* MAP */
 #map {
+  position: relative;
+  /* z-index: 0; */
   flex: 1;
-  /* min-width: 500px; */
+
   height: 100%;
   background-color: var(--color-light--1);
   border-radius: 0 20px 20px 0;
+}
+#map .zoom-out{
+  position: absolute;
+  z-index: 4000;
+  padding: 5px;
+  color: var(--color-bright--1);
+  border-radius: 10px;
+  /* background-color: red; */
+  top: 10px;
+  right: 10px;
+}
+#map .zoom-out:hover {
+  background-color: #74747477;
+  cursor: zoom-out;
 }
 
 @media (max-width: 750px){
@@ -97,8 +113,7 @@ a:visited {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 5px;
-  margin-bottom: 10px;
+  margin: 0 15px 15px 15px;
   border-bottom: 3px solid var(--color-light--1);
 }
 
@@ -138,10 +153,11 @@ a:visited {
   list-style: none;
   height: 100%;
   position: relative;
+  /* margin: 0 10px; */
   /* background-color: grey; */
   /* overflow-y: scroll; */
   overflow-x: hidden;
-  padding: 0 5px;
+  padding: 0 15px;
 }
 
 .workouts::-webkit-scrollbar {
@@ -181,6 +197,10 @@ a:visited {
   gap: 0.75rem 1.5rem;
   transition: all 0.5s, transform 1ms;
 }
+.workout:hover {
+  box-shadow: 3px 3px 15px rgb(36, 36, 36);
+}
+
 .workout.fade {
   transform: translateY(-30rem);
   height: 0;
@@ -260,6 +280,7 @@ a:visited {
   padding: 1.5rem 2.75rem;
   margin-bottom: 1.75rem;
 
+  /* position: relative; */
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0.5rem 2.5rem;
@@ -278,6 +299,16 @@ a:visited {
 }
 .form.slowslide {
   transition: all 1.3s, transform 1ms;
+}
+
+.material-symbols-outlined.close-form-btn {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  border-radius: 5px;
+  font-size: 18px;
+  background-color: rgba(255, 0, 0, 0.305);
+  cursor: pointer;
 }
 
 .form__row {
