--- a/style.css
+++ b/style.css
@@ -109,7 +109,54 @@ a:visited {
   margin-bottom: 4rem;
 }
 
+.dropdown {
+  cursor: pointer;
+}
+
+.dropdown-content{
+  position: absolute;
+  top: 0px;
+  width: 120px;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--color-dark--2);
+  font-size: 20px;
+  z-index: 3;
+  border-radius: 0 0 10px 10px;
+  overflow: hidden;
+  box-shadow: 3px 3px 15px rgb(36, 36, 36);
+
+
+}
+.dropdown-content.hidden{
+  display: none;
+}
+
+.dd-item {
+  padding: 5px 8px;
+}
+.dd-item:hover {
+  background-color: var(--color-light--1);
+  cursor: pointer;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.6); */
+  /* backdrop-filter: blur(1px); */
+  z-index: 2;
+}
+.overlay.hidden {
+  display: none;
+}
+
+
 .header{
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -208,6 +255,10 @@ a:visited {
   margin-bottom: 0;
   opacity: 0;
 }
+.workout.hidden{
+  display: none;
+}
+
 .workout--running {
   border-left: 5px solid var(--color-brand--2);
 }
